# cs768-assignment

./: .gitignore  .gitmodules  README.md  evaluations.py  pyproject.toml  ruff.toml
.zed/: tasks.json
cglp/data/: __init__.py  dataset.py  paper.py  papers.py  utils.py
config/: evaluation.yaml
notebooks/: specter.py
report/: master.typ  refs.bib  task1.typ  task2.typ
scripts/: analyze_graph.py  generate_embeddings.py  preprocess_data.py  preprocess_dataset.py
