[project]
name = "assignment"
version = "0.1.0"
description = "CS 768 Assignment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adapters>=1.1.1",
    "bibtexparser>=2.0.0b8",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "omegaconf>=2.3.0",
    "pyalex>=0.18",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]

[build-system]
requires = ["setuptools>=79.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cglp"]

[tool.setuptools.package-dir]
"" = "."
